  Viele Kunden besitzen für den Rechnungseingang eine generische E-Mail-Adresse, die nicht
  mit der allgemeine E-Mail-Adresse identisch ist. Falls dieses Feld gesetzt ist, so hat dieser
  Wert beim E-Mail Versand der Rechnung Priorität. Für die wiederkehrende Rechnung wird die
  Mail-Adresse zusätzlich bedient. In den entsprechenden vorgelagerten Masken, wird dies auch
  visuell angezeigt.


2019-01-03 - Release 3.5.3

Mittelgroße neue Features:

- Inventurerfassung

  Portierung aus einem Kundenprojekt mit folgenden Anforderungen/Features:
  - eigene Maske unter Lager->Inventur
  - Anzeige des aktuellen Lagerbestands des zu erfassenden Artikels
  - Angabe des Artikels auch über EAN
  - Angabe eines Stichtages
  - Vorbelegung Lager/Lagerplatz und Stichtag in Mandantenkonfiguration
  - korrigieren des Lagerbestands entsprechend der Zählung (mit neuem
    Transfertyp "Inventur")
  - Speichern der gezählten Menge (auch wenn keine Korrektur des Bestands
    stattfindet)
  - Warnung, wenn gleicher Artikel für gleichen Lagerplatz und Stichtag schon
    gezählt wurde und Möglichkeit die eigene gezählte Menge zu der vorhandenen
    hinzuzuzählen oder die vorher gezählte Menge durch die eigene Menge zu
    korrigieren
  - Historie der Inventurerfassung des aktuellen Bearbeiters unterhalb
    der Erfassungsmaske
  - Bericht über Inventurerfassungen

Kleinere neue Features und Detailverbesserungen:
  - Verknüpfte Belege um die Verknüpfung von Beleg nach E-Mail-Journal erweitert.
  - Filter nach Abteilungen für Lieferplan
  - Eindeutigkeit bei Rechnungsnummern von Kreditoren. (Es erfolgt eine  Warnung bei Duplikaten (Überprüfung auf Lieferant mit Rechnungsnummer))
  - Mit dem SEPA-Export verknüpfte Kreditorenbelege (Einkaufsrechnung oder Kreditorenbuchungen) können nicht mehr gelöscht oder storniert werden.
  - Tab "Belege" beim Kunden und Lieferanten. Offene Rechnungen, Aufträge
    werden angezeigt. Eine Umsatz und Mahnstatistik können in Tabs geöffnet